# Langchain_Repo

./: README.md  pyproject.toml
CH-1/: 1_Model_Call.ipynb  2_Messages_Prompts.ipynb  3_Structured_Outputs.ipynb
CH-2/: 1_Sequential_Chains.ipynb  2_Parallel_Chains.ipynb  3_Conditional_Chains.ipynb
CH-3/: 1_React_Agent.ipynb
