[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.10",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.3.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]
